--- a/src/components/elements/AddButton.css
+++ b/src/components/elements/AddButton.css
@@ -1,14 +1,27 @@
 .add-button {
-  background: green;
+  background: #008972;
   color: white;
   width: 60px;
   height: 60px;
   border-radius: 50%;
   transition: 0.5s;
-  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.65);
+  box-shadow: 0px 15px 50px 0px rgba(0,0,0,0.65);
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  position: fixed;
+  bottom: 50px;
+  right: 25px;
+
 }
 
 .add-button:hover {
   cursor: pointer;
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  width: 50px;
+  height: 50px;
+}
+
+.fa-plus:before {
+  font-size:15px;
 }
