--- a/src/components/elements/BoardCard.css
+++ b/src/components/elements/BoardCard.css
@@ -1,11 +1,61 @@
-.board-card {
+.board-card_board {
   background: white;
   padding: 0.5rem;
-  margin: 0.5rem;
-  border: 1px solid lightgrey;
-  border-radius: 5px;
-  width: 360px;
+  margin: 1.5rem auto;
+  border: 1px solid lightgray;
+  width: 375px;
+  min-height: 160px;
   /*max-width: 480px;*/
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.75);
   cursor: pointer;
+  display: flex;
+  padding-right:0;
+  z-index:3;
+}
+
+.board-card_board:first-child,
+.board-card_board:last-child {
+  margin:0 auto;
+}
+
+.board-card_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 85%;
+  padding-left:0.5rem;
+}
+
+.board-card_content > p {
+  color: #8D8D8D;
+}
+
+.board-card_avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  /*background-color: #CCB6B6;*/
+}
+
+.board-card_editButton {
+  border-top: 1px solid lightgray;
+  display: flex;
+  justify-content: flex-end;
+  margin-right:-5px;
+
+}
+
+.edit-button {
+  text-decoration: none;
+  font-weight: bold;
+  color: #787878;
+  border: none;
+  background-color: transparent;
+  margin-top:0.5rem;
+  margin-right:1rem;
+}
+
+.board-card_title {
+  margin-top:0;
+  color: #383838;
 }
